# Helmsman

./: .gitignore  API.md  README.md
hm-client/: .gitignore  gradle.properties  settings.gradle.kts
hm-client/app/: build.gradle.kts  proguard-rules.pro
hm-client/app/src/androidTest/java/helmsman/client/: ExampleInstrumentedTest.kt
hm-client/app/src/main/: AndroidManifest.xml
hm-client/app/src/main/java/helmsman/client/: HelmsmanApp.kt  MainActivity.kt
hm-client/app/src/main/java/helmsman/client/data/local/: AppDatabase.kt  TokenDao.kt  TokenEntity.kt
hm-client/app/src/main/java/helmsman/client/data/model/: CommandSpec.kt  Job.kt  PairResponse.kt  RunResult.kt  Server.kt  ServerStatus.kt
hm-client/app/src/main/java/helmsman/client/data/remote/: ApiClient.kt  AuthInterceptor.kt  HelmsmanApi.kt
hm-client/app/src/main/java/helmsman/client/domain/: AuthRepository.kt  UiState.kt
hm-client/app/src/main/java/helmsman/client/ui/commands/: CommandsScreen.kt  (+1 more)
hm-client/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
hm-client/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
hm-client/app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
hm-client/app/src/main/res/xml/: network_security_config.xml
hm-client/app/src/test/java/helmsman/client/: ExampleUnitTest.kt
hm-client/gradle/: libs.versions.toml
hm-client/gradle/wrapper/: gradle-wrapper.properties
hm-daemon/: Cargo.toml
hm-daemon/src/: auth.rs  executor.rs  handlers.rs  main.rs  models.rs  scheduler.rs  state.rs  telemetry.rs
(+15 files in other folders)
