[package]
name = "hm-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
serde_json = "1.0.149"
rusqlite = "0.38.0"
cron = "0.15.0"
surge-ping = "0.8.1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }